--- a/ecommerce-spring-back/src/main/resources/application-dev.yml
+++ b/ecommerce-spring-back/src/main/resources/application-dev.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 8082
   servlet:
     context-path: /api/v1
 
@@ -32,7 +32,8 @@ spring:
       jdbc:
         lob:
           non_contextual_creation: true
+request-mapping:
+  controller:
+    managament-brand: managament-brand
+    managament-product: managament-product
 
-logging:
-  level:
-    org.hibernate.SQL: debug
